# misc

./: 08_random_forest.ipynb  10_sklearn_loop.ipynb  11_enet_hypers_opt.ipynb  12_sgd_hypers_opt.ipynb  13_hgbr_hypers_opt.ipynb  14_enet_sparse_hypers_opt.ipynb  15_enet_sparse_learning_curves.ipynb  16_sgd_sparse_hypers_opt.ipynb  17_hgbr_sparse_hypers_opt.ipynb  20_ensemble.ipynb  bron_kerbosch.ipynb  ccp.py  check_loop_alpha_tracker.ipynb  check_universes.ipynb  cost_model.ipynb  data_manipulations.py  extract.py  generic.py  loadings.ipynb  loop_compute_metrics.py  loop_preprocessing.py  max_volumes.ipynb  misc.ipynb  nasdaq.py  pandas_manips.ipynb  plot.py  portfolio_construction_alpha_tracker.ipynb  portfolio_construction_markowitz.ipynb  rolling.ipynb  scrape.py  sto_euler_schemes.py  utils.py  utils_schmelzer.py
data_acquisition/: manipulate_polars.py  test_sto_euler_schemes.py  windows.py  yf.py
features/: bron_kerbosch.ipynb  hierarchical_clustering_dissimilarity_matrix_2.py  max_volumes.ipynb
internships_pairs_trading/: loadings.ipynb  pl_pairs_trading.py  simple_pairs_trading_rolling.ipynb
mean_reverting_moving_band/: accounting.ipynb  check_covariances.ipynb  check_preprocessing.ipynb  loop_alpha_tracker.py  loop_covariances.py  loop_pcas.py  loop_with_more_shifts.ipynb  loop_with_more_shifts.py  prices_yf.py  pyproject.toml  rolling_covariances_and_PCAs.ipynb  yf.py
optimization_algorithms/: test_projs_simplex.ipynb
