[tool.poetry]
name = "project"
version = "0.0.0"
description = "Systematic portfolio using convex concave programming."
authors = ["Thibault Bourgeron"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.6"
arrow = "1.3.0"
clarabel = "0.7.1"
cvxpy = "1.4.2"
loguru = "0.7.2"
numpy = "1.26.2"
pandas = "2.2.0"
pathlib = "1.0.1"
polars = "0.20.8"
pyarrow = "15.0.0"
ray = "2.9.3"
yfinance = "0.2.37"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.27.1"
ipython = "8.18.1"
matplotlib = "3.8.3"
matplotlib-inline= "0.1.6"
requests = "2.31.0"
seaborn = "0.13.2"
tqdm = "4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
